--- a/notas/10-arboles.Rmd
+++ b/notas/10-arboles.Rmd
@@ -940,7 +940,7 @@ calib_tbl <- tibble(prob = prop_bosque, obs = spam_prueba$spam)
 g_1 <- ggplot(calib_tbl, aes(x = prop_bosque, y = obs)) +
     geom_smooth(method = "loess", span = 0.5, se = FALSE, method.args=list(degree = 1)) + 
     geom_abline() 
-g_2 <- ggplot(calib_tbl, aes(x=prop_bosque)) + geom_histogram()
+g_2 <- ggplot(calib_tbl, aes(x=prop_bosque)) + geom_histogram(binwidth = 0.02)
 grid.arrange(g_1, g_2, heights = c(4, 2))
 ```
 
@@ -948,14 +948,14 @@ y vemos que nuestro modelo no tiene una calibración no muy buena: las probabili
 obtenidas del bosque están algo encogidas hacia el centro: son algo "subconfiadas".
 
 - Podemos intentar un bosque con distintos parámetros: específicamente número mínimo de casos por nodo terminal, y distinto número de *mtry*.
-- Podemos calibrar las probabilidades de este modelo usando regresión isotónica o regresión con splines no decrecientes. 
+- Podemos calibrar las probabilidades de este modelo usando regresión isotónica o regresión logística con splines no decrecientes. 
 
 Vamos a ver la segunda técnica. En primer lugar, tendremos que separar nuestra
 de muestra de prueba en dos partes: una de calibración, y otra de evaluación:
 
 ```{r}
 set.seed(1241)
-indice_calib <- sample(1:length(prop_bosque), (length(prop_bosque)*0.8) %>% floor)
+indice_calib <- sample(1:length(prop_bosque), (length(prop_bosque)*0.5) %>% floor)
 prop_bosque_calib <- prop_bosque[indice_calib]
 prop_bosque_eval <- prop_bosque[-indice_calib]
 y_calib <- spam_prueba$spam[indice_calib]
@@ -967,9 +967,11 @@ de calibración:
 
 ```{r, fig.width = 4, fig.height = 3}
 library(splines2)
-# base de splines no decrecientes:
-base_splines <- iSpline(prop_bosque_calib, knots = c(1/3, 2/3), degree = 2)
-matplot(prop_bosque_calib, base_splines, cex = 0.2)
+
+logit <- function(p) log(p / (1- p))
+# base de splines no decrecientes, en logit:
+base_splines <- iSpline(logit(prop_bosque_calib), knots = 0, degree = 2)
+matplot(logit(prop_bosque_calib), base_splines, cex = 0.2)
 ```
 
 Y hacemos una regresión de $y$ en función de la base de splines
@@ -978,7 +980,8 @@ probabilidades es:
 
 ```{r, fig.width =4, fig.height = 3}
 dat_calib <- cbind(y_calib, base_splines)
-modelo_calib <- lm(y_calib ~ ., data.frame(dat_calib))
+# con regresión logística obtendremos probabilidades:
+modelo_calib <- glm(y_calib ~ ., data.frame(dat_calib), family = "binomial")
 prob_calib <- fitted(modelo_calib)
 qplot(prop_bosque_calib, prob_calib)
 ```
@@ -986,16 +989,29 @@ qplot(prop_bosque_calib, prob_calib)
 Ahora evaluamos la calibración:
 
 ```{r, fig.width =4, fig.height = 3}
-base_splines_eval <- iSpline(prop_bosque_eval, knots = c(1/3, 2/3), degree = 2)
-probs_calibradas <- predict(modelo_calib, data.frame(base_splines_eval))
+base_splines_eval <- iSpline(logit(prop_bosque_eval), 
+                             knots = 0, degree = 2)
+probs_calibradas <- predict(modelo_calib, data.frame(base_splines_eval), 
+                            type = "response")
 calib_tbl <- tibble(prob = probs_calibradas, 
                     obs = y_eval)
 g_1 <- ggplot(calib_tbl, aes(x = probs_calibradas, y = obs)) +
     geom_smooth(method = "loess", span = 0.5, se = FALSE, method.args=list(degree = 1)) + 
     geom_abline() + geom_rug()
-g_2 <- ggplot(calib_tbl, aes(x = probs_calibradas)) + geom_histogram()
+g_2 <- ggplot(calib_tbl, aes(x = probs_calibradas)) + geom_histogram(binwidth = 0.02)
 grid.arrange(g_1, g_2, heights = c(4, 2))
 ```
+
+El score de Brier y devianza con las probabilidades calibradas es:
+
+```{r}
+score_brier(probs_calibradas, y_eval)
+devianza <- function(p, y){
+    -2*mean(y*log(p) + (1-y)*log(1 - p))
+}
+devianza(probs_calibradas, y_eval)
+```
+
 
 **Observaciones**:
 
